<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InitiativeTrackerFragment">


    <FrameLayout
        android:id="@+id/characterListContainer"
        android:layout_width="355dp"
        android:layout_height="400dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <TextView
        android:id="@+id/initiativeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/initiative"
        app:layout_constraintBottom_toTopOf="@+id/initiativeEditText"
        app:layout_constraintEnd_toEndOf="@+id/initiativeEditText"
        app:layout_constraintStart_toStartOf="@+id/initiativeEditText" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/nameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="68dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="@+id/nameEditText"
        app:layout_constraintStart_toEndOf="@+id/nameEditText"
        app:layout_constraintTop_toTopOf="@+id/nameEditText" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="169dp"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:inputType="textShortMessage"
        app:layout_constraintBottom_toTopOf="@+id/nextButton"
        app:layout_constraintEnd_toEndOf="@+id/nameTextView"
        app:layout_constraintStart_toStartOf="@+id/nameTextView" />

    <EditText
        android:id="@+id/initiativeEditText"
        android:layout_width="47dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/nameEditText"
        app:layout_constraintEnd_toStartOf="@+id/nameEditText"
        app:layout_constraintTop_toTopOf="@+id/nameEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>